--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -1,5 +1,5 @@
-add_executable(c-start-app main.c)
+add_executable(aoc-app main.c)
 
-target_link_libraries(c-start-app cstart)
+target_link_libraries(aoc-app aoc)
 
-install(TARGETS c-start-app)
+install(TARGETS aoc-app)
