--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_library(aoc aoc.c)
+add_library(aoc day01.c)
 
 target_include_directories(aoc PUBLIC ${PROJECT_SOURCE_DIR}/include)
 # target_sources(aoc PRIVATE file.c)
