--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,32 +1,23 @@
-add_library(aoc aoc.c
-  day01.c
-  day02.c
-  day03.c
-  day04.c
-  day05.c
-  day06.c
-  day07.c
-  day08.c
-  # day09.c
-  # day10.c
-  # day11.c
-  # day12.c
-  # day13.c
-  # day14.c
-  # day15.c
-  # day16.c
-  # day17.c
-  # day18.c
-  # day19.c
-  # day20.c
-  # day21.c
-  # day22.c
-  # day23.c
-  # day24.c
-  # day25.c
-)
-
+add_library(aoc aoc.c)
 target_include_directories(aoc PUBLIC ${PROJECT_SOURCE_DIR}/include)
-# target_sources(aoc PRIVATE file.c)
 
-install(TARGETS aoc)
+
+file(
+  GLOB MAIN_SRCS
+  RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}
+  "aoc2*.c")
+
+foreach(src IN LISTS MAIN_SRCS)
+  get_filename_component(name ${src} NAME_WE) # filename without extension
+
+  add_executable(${name}a ${src} aoc.c)
+  target_compile_options(${name}a PUBLIC -DPART_1=1)
+  target_include_directories(${name}a PUBLIC ${PROJECT_SOURCE_DIR}/include)
+  install(TARGETS ${name}a)
+
+  add_executable(${name}b ${src} aoc.c)
+  target_compile_options(${name}b PUBLIC -DPART_2=1)
+  target_include_directories(${name}b PUBLIC ${PROJECT_SOURCE_DIR}/include)
+  install(TARGETS ${name}b)
+endforeach()
+
